[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1.10.2"
counter="0.5.7"
itertools="0.10.1"
memoize="0.4.1"
priority-queue="1.3.2"
chumsky = "0.9.3"
ariadne = "0.3.0"
vec3D = "0.3.0"
rand = "0.8.5"
rand_distr = "0.4.3"
ordered-float = "4.2.0"
